@@ -85,6 +85,8 @@ avatar.bisonWhistle.transferTo.start=A message has been sent to ${oldOwner} to c
 avatar.bisonWhistle.transferAway.ignore=The transfer with ${newOwner} has been ignored.
 avatar.bisonWhistle.transferTo.ignore=${oldOwner} has chosen not to respond to your transfer request.
 avatar.bisonWhistle.transferOffline=[error]This bison isn't yours. You can't transfer the bison since the owner ${owner} is offline.[/error]
+avatar.bisonWhistle.followOn=Your bison will now begin following you.
+avatar.bisonWhistle.followOff=Your bison have stopped following you.
 
 avatar.ability.pickup_block=Pick Up Block
 avatar.ability.pickup_block.desc=Use earthbending to move bendable blocks. Place them in the desired position, or throw them at your enemies.
